--- a/views/home.html
+++ b/views/home.html
@@ -3,17 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Fontawesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <!-- Css -->
+  <link rel="stylesheet" href="/css/styles.css">
   <title>Mercado Liebre</title>
 </head>
 <body>
-  <header>
+  <header class="main-header">
 
-    <img src="/images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
+    <img class="logo" src="/images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
 
     <p>Lugar para poner la barra de búsqueda</p>
-    <p>Comprá en cuotas y sin tarjeta de crédito </p>
+       
+    <p> <i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito </p>
+
+    <form>
+      <input type="text" placeholder="Buscar productos, marcas">
+      <button type="submit">
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </button>
+    </form>
 
     <nav>
+      <p>Comprá en cuotas y sin tarjeta de crédito</p>
       <ul>
         <li><a href="#">Ofertas</a></li>
         <li><a href="#">Tiendas Oficiales</a></li>
@@ -22,10 +41,14 @@
       </ul>
       
       <ul>      
-        <li><a href="#">Creá tu cuenta</a></li>
-        <li><a href="#">Ingresá</a></li>
-        <li><a href="#">Mis compras</a></li>
+        <li><a href="#">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
+        <li><a href="#">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
+        <li><a href="#">Mis compras <i class="fa-solid fa-cart-shopping"></i></a></li>
       </ul>
+
+      <div class="burger-menu">
+        <i class="fa-solid fa-bars"></i>
+      </div>
     </nav>
 
   </header>
@@ -38,30 +61,30 @@
       </header>
       <article>
         <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-        <p>$6.770</p>
-        <p>40% OFF</p>
-        <h4>Cafetera Moulinex</h4>
+        <p class="price">$6.770</p>
+        <p class="discount">40% OFF</p>
+        <h4 class="description">Cafetera Moulinex</h4>
       </article>
 
       <article>
         <img src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
-        <p>$230.000</p>
-        <p>20% OFF</p>
-        <h4>MacBook Pro 2019</h4>
+        <p class="price">$230.000</p>
+        <p class="discount">20% OFF</p>
+        <h4 class="description">MacBook Pro 2019</h4>
       </article>
 
       <article>
         <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
-        <p>$70.500</p>
-        <p>10% OFF</p>
-        <h4>Samsung Galaxy S10</h4>
+        <p class="price">$70.500</p>
+        <p class="discount">10% OFF</p>
+        <h4 class="description">Samsung Galaxy S10</h4>
       </article>
 
       <article>
         <img src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
-        <p>$23.200</p>
-        <p>5% OFF</p>
-        <h4>SmartTv Samsung 43"</h4>
+        <p class="price">$23.200</p>
+        <p class="discount">5% OFF</p>
+        <h4 class="description">SmartTv Samsung 43"</h4>
       </article>
 
     </section>
@@ -72,30 +95,30 @@
       </header>
       <article>
         <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-        <p>$6.770</p>
-        <p>40% OFF</p>
-        <h4>Cafetera Moulinex</h4>
+        <p class="price">$6.770</p>
+        <p class="discount">40% OFF</p>
+        <h4 class="description">Cafetera Moulinex</h4>
       </article>
     
       <article>
         <img src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
-        <p>$230.000</p>
-        <p>20% OFF</p>
-        <h4>MacBook Pro 2019</h4>
+        <p class="price">$230.000</p>
+        <p class="discount">20% OFF</p>
+        <h4 class="description">MacBook Pro 2019</h4>
       </article>
     
       <article>
         <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
-        <p>$70.500</p>
-        <p>10% OFF</p>
-        <h4>Samsung Galaxy S10</h4>
+        <p class="price">$70.500</p>
+        <p class="discount">10% OFF</p>
+        <h4 class="description">Samsung Galaxy S10</h4>
       </article>
     
       <article>
         <img src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
-        <p>$23.200</p>
-        <p>5% OFF</p>
-        <h4>SmartTv Samsung 43"</h4>
+        <p class="price">$23.200</p>
+        <p class="discount">5% OFF</p>
+        <h4 class="description">SmartTv Samsung 43"</h4>
       </article>
     
     </section>
@@ -103,18 +126,21 @@
 
   <footer>
     <div>
+      <i class="fa-solid fa-credit-card"></i>
       <h4>Pagá con tarjeta o en efectivo</h4>
       <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
       puntos de pago. ¡Y siempre es seguro!</p>
     </div>
 
     <div>
+      <i class="fa-solid fa-gift"></i>
       <h4>Envío gratis desde $ 2.500</h4>
       <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
       productos. Es un beneficio de Mercado Puntos.</p>
     </div>
 
     <div>
+      <i class="fa-solid fa-user-shield"></i>
       <h4>Seguridad, de principio a fin</h4>
       <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
       porque estás siempre protegid@.</p>
