--- a/views/home.html
+++ b/views/home.html
@@ -32,15 +32,14 @@
     </form>
 
     <nav>
-      <p>Comprá en cuotas y sin tarjeta de crédito</p>
-      <ul>
+      <ul class="site">
         <li><a href="#">Ofertas</a></li>
         <li><a href="#">Tiendas Oficiales</a></li>
         <li><a href="#">Vender</a></li>
         <li><a href="#">Ayuda</a></li>
       </ul>
       
-      <ul>      
+      <ul class="login-navbar">      
         <li><a href="#">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
         <li><a href="#">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
         <li><a href="#">Mis compras <i class="fa-solid fa-cart-shopping"></i></a></li>
@@ -60,31 +59,43 @@
         <h2>Basado en tu última visita</h2>
       </header>
       <article>
-        <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-        <p class="price">$6.770</p>
-        <p class="discount">40% OFF</p>
-        <h4 class="description">Cafetera Moulinex</h4>
+        <img class="product" src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+        <div class="content">
+          <i class="fa-solid fa-truck"></i>        
+          <p class="price">$6.770</p>
+          <p class="discount">40% OFF</p>
+          <h4 class="description">Cafetera Moulinex</h4>
+        </div>
       </article>
 
       <article>
-        <img src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
-        <p class="price">$230.000</p>
-        <p class="discount">20% OFF</p>
-        <h4 class="description">MacBook Pro 2019</h4>
+        <img class="product" src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
+        <div class="content">
+          <i class="fa-solid fa-truck"></i>
+          <p class="price">$230.000</p>
+          <p class="discount">20% OFF</p>
+          <h4 class="description">MacBook Pro 2019</h4>
+        </div>
       </article>
 
       <article>
-        <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
-        <p class="price">$70.500</p>
-        <p class="discount">10% OFF</p>
-        <h4 class="description">Samsung Galaxy S10</h4>
+        <img class="product" src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+        <div class="content">
+          <i class="fa-solid fa-truck"></i>
+          <p class="price">$70.500</p>
+          <p class="discount">10% OFF</p>
+          <h4 class="description">Samsung Galaxy S10</h4>
+        </div>
       </article>
 
       <article>
-        <img src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
-        <p class="price">$23.200</p>
-        <p class="discount">5% OFF</p>
-        <h4 class="description">SmartTv Samsung 43"</h4>
+        <img class="product" src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
+        <div class="content">
+          <i class="fa-solid fa-truck"></i>
+          <p class="price">$23.200</p>
+          <p class="discount">5% OFF</p>
+          <h4 class="description">SmartTv Samsung 43"</h4>
+        </div>
       </article>
 
     </section>
@@ -94,31 +105,43 @@
         <h2>Ofertas</h2>
       </header>
       <article>
-        <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-        <p class="price">$6.770</p>
-        <p class="discount">40% OFF</p>
-        <h4 class="description">Cafetera Moulinex</h4>
+        <img class="product" src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+        <div class="content">
+          <i class="fa-solid fa-truck"></i>
+          <p class="price">$6.770</p>
+          <p class="discount">40% OFF</p>
+          <h4 class="description">Cafetera Moulinex</h4>
+        </div>
       </article>
     
       <article>
-        <img src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
-        <p class="price">$230.000</p>
-        <p class="discount">20% OFF</p>
-        <h4 class="description">MacBook Pro 2019</h4>
+        <img class="product" src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
+        <div class="content">
+          <i class="fa-solid fa-truck"></i>
+          <p class="price">$230.000</p>
+          <p class="discount">20% OFF</p>
+          <h4 class="description">MacBook Pro 2019</h4>
+        </div>
       </article>
     
       <article>
-        <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
-        <p class="price">$70.500</p>
-        <p class="discount">10% OFF</p>
-        <h4 class="description">Samsung Galaxy S10</h4>
+        <img class="product" src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+        <div class="content">
+          <i class="fa-solid fa-truck"></i>
+          <p class="price">$70.500</p>
+          <p class="discount">10% OFF</p>
+          <h4 class="description">Samsung Galaxy S10</h4>
+        </div>
       </article>
     
       <article>
-        <img src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
-        <p class="price">$23.200</p>
-        <p class="discount">5% OFF</p>
-        <h4 class="description">SmartTv Samsung 43"</h4>
+        <img class="product" src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
+        <div class="content">
+          <i class="fa-solid fa-truck"></i>
+          <p class="price">$23.200</p>
+          <p class="discount">5% OFF</p>
+          <h4 class="description">SmartTv Samsung 43"</h4>
+        </div>
       </article>
     
     </section>
