--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Fonts -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -16,20 +16,21 @@
   <title>Mercado Liebre</title>
 </head>
 <body>
+
   <header class="main-header">
+    <div>
+      <img class="logo" src="/images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
+         
+      <form>
+        <input type="search" placeholder="Buscar productos, marcas">
+        <button type="submit">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+      </form>
 
-    <img class="logo" src="/images/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre">
+      <p><i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito </p>
+    </div>
 
-    <p>Lugar para poner la barra de búsqueda</p>
-       
-    <p> <i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito </p>
-
-    <form>
-      <input type="text" placeholder="Buscar productos, marcas">
-      <button type="submit">
-        <i class="fa-solid fa-magnifying-glass"></i>
-      </button>
-    </form>
 
     <nav>
       <ul class="site">
@@ -58,45 +59,55 @@
       <header>
         <h2>Basado en tu última visita</h2>
       </header>
-      <article>
-        <img class="product" src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-        <div class="content">
-          <i class="fa-solid fa-truck"></i>        
-          <p class="price">$6.770</p>
-          <p class="discount">40% OFF</p>
-          <h4 class="description">Cafetera Moulinex</h4>
-        </div>
-      </article>
-
-      <article>
-        <img class="product" src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
-        <div class="content">
-          <i class="fa-solid fa-truck"></i>
-          <p class="price">$230.000</p>
-          <p class="discount">20% OFF</p>
-          <h4 class="description">MacBook Pro 2019</h4>
-        </div>
-      </article>
-
-      <article>
-        <img class="product" src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
-        <div class="content">
-          <i class="fa-solid fa-truck"></i>
-          <p class="price">$70.500</p>
-          <p class="discount">10% OFF</p>
-          <h4 class="description">Samsung Galaxy S10</h4>
-        </div>
-      </article>
-
-      <article>
-        <img class="product" src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
-        <div class="content">
-          <i class="fa-solid fa-truck"></i>
-          <p class="price">$23.200</p>
-          <p class="discount">5% OFF</p>
-          <h4 class="description">SmartTv Samsung 43"</h4>
-        </div>
-      </article>
+      <div class="products">
+        <article>
+          <img class="product" src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+          <div class="content">
+            <i class="fa-solid fa-truck"></i> 
+            <div class="price-and-discount-content">
+              <p class="price">$6.770</p>
+              <p class="discount">40% OFF</p>
+            </div>       
+            <h4 class="description">Cafetera Moulinex</h4>
+          </div>
+        </article>
+  
+        <article>
+          <img class="product" src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
+          <div class="content">
+            <i class="fa-solid fa-truck"></i>
+            <div class="price-and-discount-content">
+              <p class="price">$230.000</p>
+              <p class="discount">20% OFF</p>
+              <h4 class="description">MacBook Pro 2019</h4>
+            </div>
+          </div>
+        </article>
+  
+        <article>
+          <img class="product" src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+          <div class="content">
+            <i class="fa-solid fa-truck"></i>
+            <div class="price-and-discount-content">
+              <p class="price">$70.500</p>
+              <p class="discount">10% OFF</p>
+              <h4 class="description">Samsung Galaxy S10</h4>
+            </div>
+          </div>
+        </article>
+  
+        <article>
+          <img class="product" src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
+          <div class="content">
+            <i class="fa-solid fa-truck"></i>
+            <div class="price-and-discount-content">
+              <p class="price">$23.200</p>
+              <p class="discount">5% OFF</p>
+              <h4 class="description">SmartTv Samsung 43"</h4>
+            </div>
+          </div>
+        </article>
+      </div>
 
     </section>
 
@@ -104,46 +115,48 @@
       <header>
         <h2>Ofertas</h2>
       </header>
-      <article>
-        <img class="product" src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-        <div class="content">
-          <i class="fa-solid fa-truck"></i>
-          <p class="price">$6.770</p>
-          <p class="discount">40% OFF</p>
-          <h4 class="description">Cafetera Moulinex</h4>
-        </div>
-      </article>
-    
-      <article>
-        <img class="product" src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
-        <div class="content">
-          <i class="fa-solid fa-truck"></i>
-          <p class="price">$230.000</p>
-          <p class="discount">20% OFF</p>
-          <h4 class="description">MacBook Pro 2019</h4>
-        </div>
-      </article>
-    
-      <article>
-        <img class="product" src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
-        <div class="content">
-          <i class="fa-solid fa-truck"></i>
-          <p class="price">$70.500</p>
-          <p class="discount">10% OFF</p>
-          <h4 class="description">Samsung Galaxy S10</h4>
-        </div>
-      </article>
-    
-      <article>
-        <img class="product" src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
-        <div class="content">
-          <i class="fa-solid fa-truck"></i>
-          <p class="price">$23.200</p>
-          <p class="discount">5% OFF</p>
-          <h4 class="description">SmartTv Samsung 43"</h4>
-        </div>
-      </article>
-    
+      <div class="products">
+
+        <article>
+          <img class="product" src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+          <div class="content">
+            <i class="fa-solid fa-truck"></i>
+            <p class="price">$6.770</p>
+            <p class="discount">40% OFF</p>
+            <h4 class="description">Cafetera Moulinex</h4>
+          </div>
+        </article>
+      
+        <article>
+          <img class="product" src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
+          <div class="content">
+            <i class="fa-solid fa-truck"></i>
+            <p class="price">$230.000</p>
+            <p class="discount">20% OFF</p>
+            <h4 class="description">MacBook Pro 2019</h4>
+          </div>
+        </article>
+      
+        <article>
+          <img class="product" src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+          <div class="content">
+            <i class="fa-solid fa-truck"></i>
+            <p class="price">$70.500</p>
+            <p class="discount">10% OFF</p>
+            <h4 class="description">Samsung Galaxy S10</h4>
+          </div>
+        </article>
+      
+        <article>
+          <img class="product" src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
+          <div class="content">
+            <i class="fa-solid fa-truck"></i>
+            <p class="price">$23.200</p>
+            <p class="discount">5% OFF</p>
+            <h4 class="description">SmartTv Samsung 43"</h4>
+          </div>
+        </article>
+      </div>
     </section>
   </main>
 
