--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <!-- Css -->
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/home.css">
   <title>Mercado Liebre</title>
 </head>
 <body>
@@ -31,7 +31,6 @@
       <p><i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito </p>
     </div>
 
-
     <nav>
       <ul class="site">
         <li><a href="#">Ofertas</a></li>
@@ -41,8 +40,8 @@
       </ul>
       
       <ul class="login-navbar">      
-        <li><a href="#">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
-        <li><a href="#">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
+        <li><a href="/signup">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
+        <li><a href="/login">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
         <li><a href="#">Mis compras <i class="fa-solid fa-cart-shopping"></i></a></li>
       </ul>
 
@@ -50,6 +49,8 @@
         <i class="fa-solid fa-bars"></i>
       </div>
     </nav>
+
+    <img src="/images/img-home-banner.jpg" alt="Banner">
 
   </header>
 
