--- a/views/home.html
+++ b/views/home.html
@@ -80,8 +80,8 @@
             <div class="price-and-discount-content">
               <p class="price">$230.000</p>
               <p class="discount">20% OFF</p>
-              <h4 class="description">MacBook Pro 2019</h4>
             </div>
+            <h4 class="description">MacBook Pro 2019</h4>
           </div>
         </article>
   
@@ -92,8 +92,8 @@
             <div class="price-and-discount-content">
               <p class="price">$70.500</p>
               <p class="discount">10% OFF</p>
-              <h4 class="description">Samsung Galaxy S10</h4>
             </div>
+            <h4 class="description">Samsung Galaxy S10</h4>
           </div>
         </article>
   
@@ -104,8 +104,8 @@
             <div class="price-and-discount-content">
               <p class="price">$23.200</p>
               <p class="discount">5% OFF</p>
-              <h4 class="description">SmartTv Samsung 43"</h4>
             </div>
+            <h4 class="description">SmartTv Samsung 43"</h4>
           </div>
         </article>
       </div>
@@ -122,8 +122,10 @@
           <img class="product" src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
           <div class="content">
             <i class="fa-solid fa-truck"></i>
-            <p class="price">$6.770</p>
-            <p class="discount">40% OFF</p>
+            <div class="price-and-discount-content">
+              <p class="price">$6.770</p>
+              <p class="discount">40% OFF</p>
+            </div>
             <h4 class="description">Cafetera Moulinex</h4>
           </div>
         </article>
@@ -132,8 +134,10 @@
           <img class="product" src="/images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
           <div class="content">
             <i class="fa-solid fa-truck"></i>
-            <p class="price">$230.000</p>
-            <p class="discount">20% OFF</p>
+            <div class="price-and-discount-content">
+              <p class="price">$230.000</p>
+              <p class="discount">20% OFF</p>
+            </div>
             <h4 class="description">MacBook Pro 2019</h4>
           </div>
         </article>
@@ -142,8 +146,10 @@
           <img class="product" src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
           <div class="content">
             <i class="fa-solid fa-truck"></i>
-            <p class="price">$70.500</p>
-            <p class="discount">10% OFF</p>
+            <div class="price-and-discount-content">
+              <p class="price">$70.500</p>
+              <p class="discount">10% OFF</p>
+            </div>
             <h4 class="description">Samsung Galaxy S10</h4>
           </div>
         </article>
@@ -152,8 +158,10 @@
           <img class="product" src="/images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43'">
           <div class="content">
             <i class="fa-solid fa-truck"></i>
-            <p class="price">$23.200</p>
-            <p class="discount">5% OFF</p>
+            <div class="price-and-discount-content">
+              <p class="price">$23.200</p>
+              <p class="discount">5% OFF</p>
+            </div>
             <h4 class="description">SmartTv Samsung 43"</h4>
           </div>
         </article>
@@ -162,28 +170,30 @@
   </main>
 
   <footer>
-    <div>
-      <i class="fa-solid fa-credit-card"></i>
-      <h4>Pagá con tarjeta o en efectivo</h4>
-      <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-      puntos de pago. ¡Y siempre es seguro!</p>
+    <div class="card-container">
+      <div>
+        <i class="fa-solid fa-credit-card"></i>
+        <h4>Pagá con tarjeta o en efectivo</h4>
+        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+        puntos de pago. ¡Y siempre es seguro!</p>
+      </div>
+  
+      <div>
+        <i class="fa-solid fa-gift"></i>
+        <h4>Envío gratis desde $ 2.500</h4>
+        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+        productos. Es un beneficio de Mercado Puntos.</p>
+      </div>
+  
+      <div>
+        <i class="fa-solid fa-user-shield"></i>
+        <h4>Seguridad, de principio a fin</h4>
+        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+        porque estás siempre protegid@.</p>
+      </div>
     </div>
 
-    <div>
-      <i class="fa-solid fa-gift"></i>
-      <h4>Envío gratis desde $ 2.500</h4>
-      <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-      productos. Es un beneficio de Mercado Puntos.</p>
-    </div>
-
-    <div>
-      <i class="fa-solid fa-user-shield"></i>
-      <h4>Seguridad, de principio a fin</h4>
-      <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-      porque estás siempre protegid@.</p>
-    </div>
-
-    <p>Copyright &copy; 1999-2020 MercadoLiebre S.R.L.</p>
+    <p class="copyright">Copyright &copy; 1999-2020 MercadoLiebre S.R.L.</p>
   </footer>
 </body>
 </html>
