--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,6 +2,7 @@
   --yellow: #EAC926;
   --blue: #03264C;
   --ligth-blue: #3483fa;
+  --dark-blue: #0022AA;
   --dark-gray: #667;
   --light-gray: #ebebeb;
   --green: #39b54a;
@@ -149,7 +150,7 @@ main section article i {
 
 .content {
   border-top: 1px solid var(--light-gray);
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
 }
 
 .burger-menu {
@@ -179,12 +180,24 @@ footer {
   margin-right: auto;
 }
 
-footer div > * {
+footer .card-container div > * {
   text-align: center;
 }
 
-footer > div {
-  margin-bottom: 2rem;
+footer .card-container div h4 {
+  margin-bottom: 1rem;
+}
+
+footer .card-container > div {
+  margin-bottom: 1rem;
+  background-color: var(--white);
+  padding: 1rem;
+  border-radius: .5rem;
+}
+
+footer .copyright {
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 .fa-solid.fa-credit-card,
@@ -203,14 +216,12 @@ footer > div {
 
 @media (min-width: 361px) {
   .description {
-    display: none;
+    visibility: hidden;
+    margin-top: 1rem;
   }
 }
 
 @media (min-width: 769px) {
-  /* * {
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-  } */
 
   .main-header div {
     justify-content: space-between;
@@ -275,6 +286,35 @@ footer > div {
 
   main section article {
     max-width: 250px;
+  }
+
+  main section article:hover {
+    box-shadow: 6px 11px 23px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 6px 11px 23px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 6px 11px 23px 0px rgba(0, 0, 0, 0.75);
+  }
+
+  main section article:hover .description{
+    visibility: visible;
+    margin-bottom: 0;
+  }
+
+  main section article i:hover {
+    transform: rotate(270deg);
+    will-change: transform;
+    transition: transform .2s;
+  }
+
+  footer .card-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem
+  }
+
+  footer .card-container .fa-solid.fa-user-shield:hover,
+  footer .card-container .fa-solid.fa-gift:hover,
+  footer .card-container .fa-solid.fa-credit-card:hover {
+    color: var(--dark-blue);
   }
 
 }
